implemeted activity shared element transitions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SharedElementTransitionAndroid</string>
+    <string name="bird_image">Bird Image</string>
+    <string name="user_name">User Name</string>
 </resources>
